# gapsmith

./: .gitignore  Cargo.toml  PUBLISHING.md  README.md
.github/workflows/: ci.yml
crates/gapseq-align/: Cargo.toml
crates/gapseq-align/src/: batch.rs  blast.rs  diamond.rs  error.rs  hit.rs  lib.rs  mmseqs2.rs  precomputed.rs  tsv.rs
crates/gapseq-align/tests/: batch.rs  parity.rs  smoke.rs
crates/gapseq-cli/: Cargo.toml
crates/gapseq-cli/src/: main.rs
crates/gapseq-cli/src/commands/: adapt.rs  align.rs  batch_align.rs  convert.rs  db.rs  doall.rs  draft.rs  example_model.rs  export_sbml.rs  fba.rs  fill.rs  find.rs  find_transport.rs  medium.rs  mod.rs  pan.rs  test.rs  update_sequences.rs
crates/gapseq-cli/tests/: roundtrip.rs
crates/gapseq-core/: Cargo.toml
crates/gapseq-core/src/: compartment.rs  gpr.rs  id.rs  lib.rs  metabolite.rs  model.rs  reaction.rs  stoich.rs
crates/gapseq-db/: Cargo.toml
crates/gapseq-db/src/: biomass.rs  common.rs  complex.rs  exception.rs  lib.rs  medium_rules.rs  mnxref.rs  pathway.rs  seed.rs  stoich_parse.rs  subex.rs  tcdb.rs
crates/gapseq-draft/: Cargo.toml
crates/gapseq-draft/src/: biomass.rs  builder.rs  candidate.rs  exchanges.rs  gpr.rs  lib.rs  reactions_tbl.rs  runner.rs  stoich_hash.rs
crates/gapseq-draft/tests/: smoke.rs
crates/gapseq-fill/: Cargo.toml
crates/gapseq-fill/src/: error.rs  fba.rs  futile.rs  gapfill.rs  lib.rs  lp.rs  medium.rs  pfba.rs  pool.rs  suite.rs
crates/gapseq-fill/tests/: fill_smoke.rs  suite_toy.rs  textbook.rs
crates/gapseq-find/: Cargo.toml
crates/gapseq-find/src/: classify.rs  complex.rs  dbhit.rs  lib.rs  output.rs  pathways.rs  runner.rs  seqfile.rs  taxonomy.rs  types.rs
crates/gapseq-find/tests/: complex_parity.rs  pipeline_parity.rs
crates/gapseq-io/: Cargo.toml
crates/gapseq-io/src/: cbor.rs  json.rs  lib.rs  paths.rs
crates/gapseq-medium/: Cargo.toml
crates/gapseq-medium/src/: boolexpr.rs  lib.rs  predict.rs  rules.rs
crates/gapseq-sbml/: Cargo.toml
crates/gapseq-sbml/src/: lib.rs  namespaces.rs  writer.rs
crates/gapseq-sbml/tests/: integration.rs
crates/gapseq-transport/: Cargo.toml
crates/gapseq-transport/examples/: inspect_small.rs
crates/gapseq-transport/src/: data.rs  filter.rs  lib.rs  output.rs  runner.rs  tc.rs
crates/gapseq-transport/tests/: parity.rs
crates/gapsmith-align/: Cargo.toml
crates/gapsmith-cli/: Cargo.toml
crates/gapsmith-cli/src/: main.rs
crates/gapsmith-cli/src/commands/: adapt.rs  fba.rs  mod.rs  update_data.rs
crates/gapsmith-core/: Cargo.toml
crates/gapsmith-db/: Cargo.toml
crates/gapsmith-draft/: Cargo.toml
crates/gapsmith-draft/src/: builder.rs  gpr.rs
crates/gapsmith-fill/: Cargo.toml
crates/gapsmith-fill/src/: fba.rs  futile.rs  gapfill.rs  pfba.rs  suite.rs
crates/gapsmith-fill/tests/: atp_cycle.rs  fill_smoke.rs
crates/gapsmith-find/: Cargo.toml
crates/gapsmith-find/src/: complex.rs  pathways.rs
crates/gapsmith-io/: Cargo.toml
crates/gapsmith-medium/: Cargo.toml
crates/gapsmith-sbml/: Cargo.toml
crates/gapsmith-transport/: Cargo.toml
crates/gapsmith-transport/src/: output.rs
data/: README.md
docs/: architecture.md  cli-reference.md  feature-matrix.md  porting-notes.md  user-guide.md
tools/: r_complex_detection.R  validate_sbml.py
tools/bench/: aggregate.py  run_bench.sh
