[workspace]
resolver = "2"
members = [
    "crates/gapsmith-core",
    "crates/gapsmith-io",
    "crates/gapsmith-db",
    "crates/gapsmith-sbml",
    "crates/gapsmith-align",
    "crates/gapsmith-find",
    "crates/gapsmith-transport",
    "crates/gapsmith-draft",
    "crates/gapsmith-fill",
    "crates/gapsmith-medium",
    "crates/gapsmith-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Robert Hoehndorf <robert.hoehndorf@kaust.edu.sa>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/bio-ontology-research-group/gapsmith"
homepage = "https://bio-ontology-research-group.github.io/gapsmith/"
readme = "README.md"
keywords = ["bioinformatics", "genomics", "metabolism", "metabolic-network", "fba"]
categories = ["science", "command-line-utilities"]
description = "Rust reimplementation of gapseq — informed prediction and analysis of bacterial metabolic pathways and genome-scale networks"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
ciborium = "0.2"
sprs = { version = "0.11", default-features = false, features = ["serde"] }
clap = { version = "4", features = ["derive", "wrap_help"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Workspace-internal (version is required for crates.io publishing;
# path is used for local builds and stripped on publish)
gapsmith-core      = { version = "0.1.0", path = "crates/gapsmith-core" }
gapsmith-io        = { version = "0.1.0", path = "crates/gapsmith-io" }
gapsmith-db        = { version = "0.1.0", path = "crates/gapsmith-db" }
gapsmith-sbml      = { version = "0.1.0", path = "crates/gapsmith-sbml" }
gapsmith-align     = { version = "0.1.0", path = "crates/gapsmith-align" }
gapsmith-find      = { version = "0.1.0", path = "crates/gapsmith-find" }
gapsmith-transport = { version = "0.1.0", path = "crates/gapsmith-transport" }
gapsmith-draft     = { version = "0.1.0", path = "crates/gapsmith-draft" }
gapsmith-fill      = { version = "0.1.0", path = "crates/gapsmith-fill" }
gapsmith-medium    = { version = "0.1.0", path = "crates/gapsmith-medium" }

# SBML-specific
quick-xml   = "0.37"

# Alignment-specific
tempfile    = "3"

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1
