[package]
name = "gapseq-align"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Alignment abstraction for gapseq-rs: blast/diamond/mmseqs2 runners + precomputed TSV ingestion."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
