[package]
name = "gapseq-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line interface for gapseq-rs."

[[bin]]
name = "gapseq"
path = "src/main.rs"

[dependencies]
gapseq-core = { workspace = true }
gapseq-io = { workspace = true }
gapseq-db = { workspace = true }
gapseq-sbml = { workspace = true }
gapseq-align = { workspace = true }
gapseq-find = { workspace = true }
gapseq-transport = { workspace = true }
gapseq-draft = { workspace = true }
gapseq-fill = { workspace = true }
gapseq-medium = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
flate2 = "1"
tar = "0.4"
md-5 = "0.10"
ureq = { version = "2", default-features = false, features = ["tls"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
