[package]
name = "gapseq-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Core types for gapseq-rs: Model, Reaction, Metabolite, StoichMatrix, GPR."

[dependencies]
serde = { workspace = true }
sprs = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
ciborium = { workspace = true }
