[package]
name = "gapseq-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Loaders for gapseq's reference data tables (SEED, MNXref, biomass JSON, pathway tables)."

[dependencies]
gapseq-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
csv = "1"

[dev-dependencies]
tempfile = "3"
