[package]
name = "gapseq-draft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Draft model construction for gapseq-rs (port of src/generate_GSdraft.R + helpers)."

[dependencies]
gapseq-core = { workspace = true }
gapseq-db = { workspace = true }
gapseq-sbml = { workspace = true }
gapseq-io = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
flate2 = "1"
