[package]
name = "gapseq-find"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Pathway/reaction finder for gapseq-rs: selects pathways, orchestrates alignment, classifies hits, scores completeness."

[dependencies]
gapseq-core = { workspace = true }
gapseq-db = { workspace = true }
gapseq-align = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
regex = "1"
md-5 = "0.10"

[dev-dependencies]
flate2 = "1"
