[package]
name = "gapseq-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "I/O helpers for gapseq-rs: model (de)serialization (CBOR/JSON), paths, TSV/FASTA utilities."

[dependencies]
gapseq-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
