[package]
name = "gapseq-medium"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rule-based medium inference — port of gapseq's predict_medium.R"

[dependencies]
gapseq-core = { workspace = true }
gapseq-db = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
