[package]
name = "gapseq-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Transporter detection for gapseq-rs (port of src/transporter.sh + analyse_alignments_transport.R)."

[dependencies]
gapseq-core = { workspace = true }
gapseq-db = { workspace = true }
gapseq-align = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
regex = "1"

[dev-dependencies]
flate2 = "1"
