[package]
name = "gapsmith-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core types for gapsmith: Model, Reaction, Metabolite, StoichMatrix, GPR."
categories.workspace = true
keywords.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
sprs = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
ciborium = { workspace = true }
