[package]
name = "gapsmith-fill"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "FBA / pFBA / gap-filling via good_lp + HiGHS for gapseq"
categories.workspace = true
keywords.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
gapsmith-core = { workspace = true }
gapsmith-db = { workspace = true }
gapsmith-draft = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
sprs = { workspace = true }
rayon = "1.10"
good_lp = { version = "1.15", default-features = false, features = ["highs"] }

[features]
default = []
# Enables CBC as a fallback LP backend. Requires `coinor-libcbc-dev` on
# the system (apt: `coinor-libcbc-dev coinor-libclp-dev`). Off by default
# because CBC links statically and adds ~20 MB to the binary.
cbc = ["good_lp/coin_cbc"]

[dev-dependencies]
anyhow = { workspace = true }
tempfile = { workspace = true }
gapsmith-io = { workspace = true }
gapsmith-sbml = { workspace = true }
