[package]
name = "gapsmith-find"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pathway/reaction finder for gapsmith: selects pathways, orchestrates alignment, classifies hits, scores completeness."
categories.workspace = true
keywords.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
gapsmith-core = { workspace = true }
gapsmith-db = { workspace = true }
gapsmith-align = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
regex = "1"
md-5 = "0.10"

[dev-dependencies]
flate2 = "1"
