[package]
name = "gapsmith-medium"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rule-based medium inference — port of gapseq's predict_medium.R"
categories.workspace = true
keywords.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
gapsmith-core = { workspace = true }
gapsmith-db = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
