[package]
name = "gapsmith-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Transporter detection for gapsmith (port of src/transporter.sh + analyse_alignments_transport.R)."
categories.workspace = true
keywords.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
gapsmith-core = { workspace = true }
gapsmith-db = { workspace = true }
gapsmith-align = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
regex = "1"

[dev-dependencies]
flate2 = "1"
